fix header z-index

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,6 +15,7 @@ img.profile-pic {
 nav {
   position: sticky;
   top: 0;
+  z-index: 1000000 !important;
 }
 nav a.brand-logo {
   height: 100%;
